<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_item1"
        android:title="@string/item_01"
        android:icon="@drawable/activityfeed"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_item2"
        android:title="@string/item_02"
        android:icon="@drawable/food"
        android:orderInCategory="102"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_item3"
        android:title="@string/item_03"
        android:icon="@drawable/temperature"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item4"
        android:title="@string/item_04"
        android:icon="@drawable/car"
        android:orderInCategory="104"
        app:showAsAction="never" />

</menu>