<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="25dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/litersRecordInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/literLabel"/>

    <TextView
        android:id="@+id/litersRecordInfo"
        android:layout_width="75dp"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/priceRecordInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/priceLabel"/>

    <TextView
        android:id="@+id/priceRecordInfo"
        android:layout_width="75dp"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/kmRecordInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/kmLabel"/>

    <TextView
        android:id="@+id/kmRecordInfo"
        android:layout_width="75dp"
        android:layout_height="match_parent" />




</LinearLayout>