<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="10dp"-->
                <!--android:text="@string/activity_id"-->
                <!--android:textSize="14sp"-->
                <!--android:textStyle="bold" />-->

            <!--<EditText-->
                <!--android:id="@+id/editActivityId"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="text"-->
                <!--android:padding="10dp"-->
                <!--android:textSize="14sp" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/activity_type"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/editActivityType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <!--<EditText-->
            <!--android:id="@+id/editActivityType"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="text"-->
            <!--android:padding="10dp"-->
            <!--android:textSize="14sp" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingRight="0dp"
                android:text="@string/activity_duration"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editActivityDuration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"

                android:padding="15dp"
                android:paddingLeft="0dp"
                android:textSize="14sp"
                android:inputType="number"/>

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Minutes"-->
            <!--android:textSize="14sp" />-->

            <TextView
                android:id="@+id/row_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/transparent"
                android:textSize="0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/date_created"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dateCreated"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:padding="10dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/activity_comment"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editActivityComment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#50c5c5c5"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="4"
                android:minLines="3"
                android:padding="10dp"
                android:scrollHorizontally="false"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|bottom"
        android:orientation="horizontal" />

</LinearLayout>



